--- a/src/assets/components/Counter/style.css
+++ b/src/assets/components/Counter/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -33,4 +33,4 @@ body {
   background: #141517;
   color: #fff;
   cursor: pointer;
-}
+} */
