--- a/src/assets/components/Todo/style.css
+++ b/src/assets/components/Todo/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -55,4 +55,4 @@ button {
 .close {
   padding: 5px 10px;
   cursor: pointer;
-}
+} */
